compiling_error.txt
/Users/alex/fye19/CP2LP2_AWILL.cpp:32:24: error: expected expression
        double table = [timesteps][2]
                       ^
/Users/alex/fye19/CP2LP2_AWILL.cpp:37:16: error: invalid operands to binary expression ('std::__1::string' (aka 'basic_string<char, char_traits<char>, allocator<char> >') and 'double')
        output << table;
        ~~~~~~ ^  ~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:748:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<_CharT, _Traits>& __os, _CharT __c)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:755:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<_CharT, _Traits>& __os, char __cn)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:788:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<char, _Traits>& __os, char __c)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:795:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<char, _Traits>& __os, signed char __c)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:802:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<char, _Traits>& __os, unsigned char __c)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:809:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<_CharT, _Traits>& __os, const _CharT* __str)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:816:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<_CharT, _Traits>& __os, const char* __strn)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:862:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<char, _Traits>& __os, const char* __str)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:869:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<char, _Traits>& __os, const signed char* __str)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:877:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<char, _Traits>& __os, const unsigned char* __str)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:1044:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<_CharT, _Traits>& __os,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:1052:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<_CharT, _Traits>& __os,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:1061:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<_CharT, _Traits>& __os, const error_code& __ec)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:1069:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<_CharT, _Traits>& __os, shared_ptr<_Yp> const& __p)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:1090:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<_CharT, _Traits>& __os, const bitset<_Size>& __x)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iomanip:362:1: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
operator<<(basic_ostream<_CharT, _Traits>& __os, const __iom_t8<_MoneyT>& __x)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iomanip:477:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<_Cp, _Traits>& __os, const __iom_t10<_Cp>& __x);
    ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iomanip:572:33: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
basic_ostream<_CharT, _Traits>& operator<<(
                                ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iomanip:592:33: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
basic_ostream<_CharT, _Traits>& operator<<(
                                ^
/Users/alex/fye19/CP2LP2_AWILL.cpp:38:16: error: no member named 'close' in 'std::__1::basic_string<char>'
        output.close();
        ~~~~~~ ^
/Users/alex/fye19/CP2LP2_AWILL.cpp:39:54: error: use of undeclared identifier 'operation'; did you mean 'operator'?
        cout<<"Your answer is: " << input1 << " " << operation << " " << input2 << " " << "=" << " " << setprecision(5) << ans  << endl;
                                                     ^~~~~~~~~
                                                     operator
/Users/alex/fye19/CP2LP2_AWILL.cpp:39:66: error: expected ';' after expression
        cout<<"Your answer is: " << input1 << " " << operation << " " << input2 << " " << "=" << " " << setprecision(5) << ans  << endl;
                                                                 ^
                                                                 ;
/Users/alex/fye19/CP2LP2_AWILL.cpp:39:37: error: use of undeclared identifier 'input1'
        cout<<"Your answer is: " << input1 << " " << operation << " " << input2 << " " << "=" << " " << setprecision(5) << ans  << endl;
                                    ^
/Users/alex/fye19/CP2LP2_AWILL.cpp:39:74: error: use of undeclared identifier 'input2'
        cout<<"Your answer is: " << input1 << " " << operation << " " << input2 << " " << "=" << " " << setprecision(5) << ans  << endl;
                                                                         ^
/Users/alex/fye19/CP2LP2_AWILL.cpp:39:124: error: use of undeclared identifier 'ans'
        cout<<"Your answer is: " << input1 << " " << operation << " " << input2 << " " << "=" << " " << setprecision(5) << ans  << endl;
                                                                                                                           ^
8 errors generated.
